services/ui/ws/window_tree.cc
@@ -1224,6 +1224,32 @@ bool WindowTree::CanReorderWindow(const ServerWindow* window,
   return true;
 }
 
+bool WindowTree::RemoveWindowFromParent(
+    const ClientWindowId& client_window_id) {
+  ServerWindow* window = GetWindowByClientId(client_window_id);
+  DVLOG(3) << "removing window from parent client=" << id_
+           << " client window_id= " << client_window_id
+           << " global window_id=" << DebugWindowId(window);
+  if (!window) {
+    DVLOG(1) << "RemoveWindowFromParent failed (invalid window id="
+             << client_window_id.ToString() << ")";
+    return false;
+  }
+  if (!window->parent()) {
+    DVLOG(1) << "RemoveWindowFromParent failed (no parent id="
+             << client_window_id.ToString() << ")";
+    return false;
+  }
+  if (!access_policy_->CanRemoveWindowFromParent(window)) {
+    DVLOG(1) << "RemoveWindowFromParent failed (access policy disallowed id="
+             << client_window_id.ToString() << ")";
+    return false;
+  }
+  Operation op(this, window_server_, OperationType::REMOVE_WINDOW_FROM_PARENT);
+  window->parent()->Remove(window);
+  return true;
+}
+
 bool WindowTree::DeleteWindowImpl(WindowTree* source, ServerWindow* window) {
   DCHECK(window);
   DCHECK_EQ(window->id().client_id, id_);
@@ -1588,27 +1614,8 @@ void WindowTree::AddWindow(uint32_t change_id, Id parent_id, Id child_id) {
 }
 
 void WindowTree::RemoveWindowFromParent(uint32_t change_id, Id window_id) {
-  bool success = false;
-  ServerWindow* window = GetWindowByClientId(MakeClientWindowId(window_id));
-  DVLOG(3) << "removing window from parent client=" << id_
-           << " client window_id= " << window_id
-           << " global window_id=" << DebugWindowId(window);
-  if (!window) {
-    DVLOG(1) << "RemoveWindowFromParent failed (invalid window id=" << change_id
-             << ")";
-  } else if (!window->parent()) {
-    DVLOG(1) << "RemoveWindowFromParent failed (no parent id=" << change_id
-             << ")";
-  } else if (!access_policy_->CanRemoveWindowFromParent(window)) {
-    DVLOG(1) << "RemoveWindowFromParent failed (access policy disallowed id="
-             << change_id << ")";
-  } else {
-    success = true;
-    Operation op(this, window_server_,
-                 OperationType::REMOVE_WINDOW_FROM_PARENT);
-    window->parent()->Remove(window);
-  }
-  client()->OnChangeCompleted(change_id, success);
+  client()->OnChangeCompleted(
+      change_id, RemoveWindowFromParent(MakeClientWindowId(window_id)));
 }
 
 void WindowTree::AddTransientWindow(uint32_t change_id,
@@ -2680,6 +2687,30 @@ bool WindowTree::IsWindowCreatedByWindowManager(
 
   return display_root->window_manager_state()->window_tree()->id() ==
          window->id().client_id;
+}
+
+bool WindowTree::ShouldInterceptEventsForAccessPolicy(
+    const ServerWindow* window) const {
+  // Indicates the tree was created as the result of an Embed().
+  if (user_id_.empty())
+    return false;
+
+  while (window) {
+    // Find the first window created by this client. If there is an embedding,
+    // it'll be here.
+    if (window->id().client_id == id_) {
+      // embedded_tree->embedder_intercepts_events() indicates Embed() was
+      // called with kEmbedFlagEmbedderInterceptsEvents. In this case the
+      // embedder needs to see the window so that it knows the event is
+      // targetted at it.
+      WindowTree* embedded_tree = window_server_->GetTreeWithRoot(window);
+      if (embedded_tree && embedded_tree->embedder_intercepts_events())
+        return true;
+      return false;
+    }
+    window = window->parent();
+  }
+  return false;
 }
 
 void WindowTree::OnDragMoved(const gfx::Point& location) {
